--- a/example/.gitignore
+++ b/example/.gitignore
@@ -7,6 +7,16 @@ bin-debug/
 bin-release/
 bin-release-temp/
 
+mac_packaging/*.app
+mac_packaging/*.plist
+mac_packaging/*.pkg
+mac_packaging/*.provisionprofile
+mac_packaging/sign_playground.sh
+mac_packaging/signTR.sh
+mac_packaging/signTR_store.sh
+mac_packaging/signTR_developerId.sh
+mac_packaging/Assets.xcassets/AppIcon.appiconset/*.png
+
 # Other files and folders
 .settings/
 
